--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,7 +37,8 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-       - { path: ^/home, roles: ROLE_USER }
+       - { path: ^/medecin, roles: ROLE_MEDECIN }
+       - { path: ^/patient, roles: ROLE_PATIENT }
 
 when@test:
     security:
