--- a/.env
+++ b/.env
@@ -48,3 +48,15 @@ MAILER_DSN=smtp://user:pass@smtp.example.com:port
 # Gmail SHOULD NOT be used on production, use it in development only.
 MAILER_DSN=gmail://muhamedabesy10@gmail.com:mailaadime@default?verify_peer=0
 ###< symfony/google-mailer ###
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+###< symfony/swiftmailer-bundle ###
+MAILER_URL=gmail://muhamedabesy10@gmail.com:mailaadime@localhost
+
+
+###> symfony/sendgrid-mailer ###
+SENDGRID_KEY=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
+MAILER_DSN=sendgrid+smtp://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@default
+###< symfony/sendgrid-mailer ###
