--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=caadc4772b1a96b7f61eac73b0cd7e06
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
-DATABASE_URL="mysql://root:@127.0.0.1:3306/docnet"
+DATABASE_URL="mysql://root:Super@3abdou@127.0.0.1:3306/docnet"
 
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
@@ -40,7 +40,7 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/docnet"
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
-MAILER_DSN=smtp://user:pass@smtp.example.com:port
+#MAILER_DSN=smtp://user:pass@smtp.example.com:port
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
@@ -48,17 +48,12 @@ MAILER_DSN=smtp://user:pass@smtp.example.com:port
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://muhamedabesy10@gmail.com:mailaadime@default?verify_peer=0
-###< symfony/google-mailer ###
-###> symfony/swiftmailer-bundle ###
-# For Gmail as a transport, use: "gmail://username:password@localhost"
-# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
-# Delivery is disabled by default via "null://localhost"
-###< symfony/swiftmailer-bundle ###
-MAILER_URL=gmail://muhamedabesy10@gmail.com:mailaadime@localhost
+MAILER_DSN=gmail+smtp://symfonyttester@gmail.com:ajisxnkgpsclmqbq@default
+###< symfony/google-mailer ### 
+#MAILER_URL=gmail://muhamedabesy10@gmail.com:mailaadime@localhost
 
 
 ###> symfony/sendgrid-mailer ###
-SENDGRID_KEY=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
-MAILER_DSN=sendgrid+smtp://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@default
+#SENDGRID_KEY=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
+#MAILER_DSN=sendgrid+smtp://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@default
 ###< symfony/sendgrid-mailer ###
