--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=caadc4772b1a96b7f61eac73b0cd7e06
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
-DATABASE_URL="mysql://root:Super@3abdou@127.0.0.1:3306/docnet"
+DATABASE_URL="mysql://root:roottoor@127.0.0.1:3306/docnet"
 
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
