--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "symfonycasts/verify-email-bundle": "^1.13",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
+        "twilio/sdk": "^6.44",
         "vich/uploader-bundle": "^1.21"
     },
     "require-dev": {
