--- a/.env
+++ b/.env
@@ -62,3 +62,12 @@ MAILER_URL=gmail://muhamedabesy10@gmail.com:mailaadime@localhost
 SENDGRID_KEY=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
 MAILER_DSN=sendgrid+smtp://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@default
 ###< symfony/sendgrid-mailer ###
+
+RECAPTCHA_SITE_KEY=6LcT9uIkAAAAAJV9-EIeSOd-UPQlBc0qf344hWe2
+RECAPTCHA_SECRET_KEY=6LcT9uIkAAAAAPNZrFzeLxXSn5fpxbpltLYd_4NP
+###> google/recaptcha ###
+# To use Google Recaptcha, you must register a site on Recaptcha's admin panel:
+# https://www.google.com/recaptcha/admin
+GOOGLE_RECAPTCHA_SITE_KEY=
+GOOGLE_RECAPTCHA_SECRET=
+###< google/recaptcha ###
