--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/docnet"
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
-MAILER_DSN=smtp://user:pass@smtp.example.com:port
+
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
@@ -48,19 +48,18 @@ MAILER_DSN=smtp://user:pass@smtp.example.com:port
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://muhamedabesy10@gmail.com:mailaadime@default?verify_peer=0
+MAILER_DSN=gmail://nassim.benali@esprit.tn:Nassimbenali4@default?verify_peer=0
 ###< symfony/google-mailer ###
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 ###< symfony/swiftmailer-bundle ###
-MAILER_URL=gmail://muhamedabesy10@gmail.com:mailaadime@localhost
+
 
 
 ###> symfony/sendgrid-mailer ###
-SENDGRID_KEY=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
-MAILER_DSN=sendgrid+smtp://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@default
+
 ###< symfony/sendgrid-mailer ###
 
 RECAPTCHA_SITE_KEY=6LcT9uIkAAAAAJV9-EIeSOd-UPQlBc0qf344hWe2
