--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.8",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "dompdf/dompdf": "^2.0",
         "google/recaptcha": "^1.3",
         "gregwar/captcha-bundle": "^1.0",
         "phpdocumentor/reflection-docblock": "^5.3",
