--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,6 +8,8 @@ parameters:
     google_recaptcha_site_key: '%env(GOOGLE_RECAPTCHA_SITE_KEY)%'
 
 services:
+    App\Service\PdfGenerator:
+        arguments: []
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
