--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,15 @@
 #    controller: App\Controller\DefaultController::index
 login_check:
   path: /login_check
+  # config/routes.yaml
+medicaments:
+    path: /medicaments
+    controller: App\Controller\MedicamentsController::medicaments
+    # config/routes.yaml
+
+# app_panierx_new:
+#     path: /panierx/new/
+#     controller: App\Controller\PanierController::new
+
+
+    
