--- a/.env
+++ b/.env
@@ -62,3 +62,9 @@ MAILER_URL=gmail://muhamedabesy10@gmail.com:mailaadime@localhost
 SENDGRID_KEY=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
 MAILER_DSN=sendgrid+smtp://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@default
 ###< symfony/sendgrid-mailer ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=e7524b9b694ee61d60573f724f7adf4b
+###< lexik/jwt-authentication-bundle ###
